--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,16 @@ body {
     color: #eee7e7;
     padding: 20px;
     border-radius: 10px;
-    background-color: #464646;
+    background-color: #4d4545;
     font-size: x-large;
-    
-    
+}
+
+
+.menu-href {
+    color: #eee7e7;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #4d4545;
+    font-size: x-large;
 }
 
