--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@ body {
     color: #333;
 }
 
-.bayner {
+.banner {
     background: #1b1919;
     color: #fff;
     text-align: center;
-    padding: 2rem 0;
+    padding: 1rem 0;
 }
 
 .projeto {
