--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     background: #1b1919;
     color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    width:200px;
 }
 
 .projeto {
