--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .programador {
-    max-width: 150px;
+    max-width: 300x;
     border-radius: 50%;
     margin-bottom: 20px;
     border: 4px solid white;
