--- a/style.css
+++ b/style.css
@@ -24,10 +24,11 @@ body {
 }
 
 .programador {
-    max-width: 1px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-    border: 4px solid white;
+    display: block;
+    margin: 0 auto;
+    width: 150px;
+    height: auto;
+
 }
 
 /* Botões de navegação */
