--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     margin-bottom: 30px;
 }
 
-.programador {
+.gleison programando 2. jpeg {
     max-width: 150px;
     border-radius: 50%;
     margin-bottom: 20px;
