--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     margin-bottom: 30px;
 }
 
-.programador {
+.profile-image {
     width: 50px; /* Tamanho fixo */
     height: 50px; /* Mantém proporção quadrada */
     border-radius: 50%;
